--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>Demo for MHCID</h1>
     <p>This is a sample web page that links github to heroku!</p>
-    <h4>—Ken Mead</h4>
+    <h4>Ken Mead</h4>
   </body>
 </html>
