--- a/font-sample.html
+++ b/font-sample.html
@@ -3,6 +3,11 @@
   <head>
     <title>Font Sample</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto:300|Shadows+Into+Light+Two" rel="stylesheet">
+    <style>
+      h1 {font-family: 'Lato', sans-serif; font-size: 3em;}
+      p {font-family: 'Roboto', sans-serif; font-size 1em;}
+      .signature {font-family: 'Shadows Into Light Two', cursive; font-size: 1em;}    
+    </style>
   </head>
   <body>
     <h1>Things My Roommate Has Said</h1>
@@ -16,3 +21,6 @@
     
   </body>
 </html>
+
+
+
