--- a/font-sample.html
+++ b/font-sample.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Font Sample</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto:300|Shadows+Into+Light+Two" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto:300|Shadows+Into+Light+Two&amp;subset=latin-ext" rel="stylesheet">
     <style>
       h1 {font-family: 'Lato', sans-serif; font-size: 3em;}
       p {font-family: 'Roboto', sans-serif; font-size 1em;}
