--- a/font-sample.html
+++ b/font-sample.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Things My Roommate Has Said</h1>
     
-    <p>I’m don’t care about losing. As long as I come back and win again.</p>
+    <p>I don’t care about losing. As long as I come back and win again.</p>
     <p>I think we’re on the wrong side of the same page.</p>
     <p>Past 'me' always suprises current 'me'.</p>
     
