--- a/font-sample.html
+++ b/font-sample.html
@@ -16,7 +16,7 @@
     <p>I think we’re on the wrong side of the same page.</p>
     <p>Past 'me' always suprises current 'me'.</p>
     
-    <p class="signature">— my roommate</p>
+    <p class="signature">My roommate</p>
 
     
   </body>
