--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p><a href="font-sample.html">This is a link to the font-sample file</a></p>
     <p><a href="bootstrap-sample.html">This is a link to the bootstrap sample file</a></p>
     <h1>Demo for MHCID</h1>
-    <p>This is a sample web page that links github to heroku!</p>
+    <p>This is a sample web page that links GitHub to Heroku!</p>
     <h4>Ken Mead</h4>
   </body>
 </html>
