--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -9,9 +9,72 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <link rel="stylesheet" type="text/css" href="bootstrapsamplecss.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="#">GEOPUNS</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-lg-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Puns</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+
+
+    <section class="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2>Geology Rocks...</h2>
+            <p>...but geography is where it's at.</p>
+            <button type="button" class="btn btn-primary btn-lg">Learn More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+<section class="content-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm text-center">
+        <img src="images/400-circle-simon-schmitt-45357-unsplash.png" class="img-fluid circle-image" alt="photo of a person holding a rock">
+        <p>A rock</p>
+      </div>
+      <div class="col-sm text-center">
+        <img src="images/400-circle dylan-nolte-561931-unsplash.png" class="img-fluid circle-image" alt="photo of a surprised looking man">
+        <p>A person</p>
+      </div>
+      <div class="col-sm text-center">
+        <img src="images/400-circle-martin-211-unsplash.png" class="img-fluid circle-image" alt="a brick wall">
+        <p>A hard place</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
