--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -47,14 +47,14 @@
           <div class="col-sm-6">
             <h2>Geology Rocks...</h2>
             <p>...but geography is where it's at.</p>
-            <button type="button" class="btn btn-primary btn-lg">Learn More</button>
+            <a class="btn btn-primary btn-lg" href="#rock-hard-place" role="button">Show Me a Visual Pun</a>
           </div>
         </div>
       </div>
     </section>
 
 
-<section class="content-section">
+<section class="content-section" id="rock-hard-place">
   <div class="container">
     <div class="row">
       <div class="col-sm text-center">
