--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -73,8 +73,22 @@
   </div>
 </section>
 
-
-    
+<section class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2">2</div>
+      <div class="col-sm-2">2</div>
+      <div class="col-sm-2">2</div>
+      <div class="col-sm-2">2</div>
+      <div class="col-sm-2">2</div>
+      <div class="col-sm-2">2</div>
+    </div>
+    <div class="row">
+      <div class="col-6">6</div>
+      <div class="col-6">6</div>
+    </div>
+  </div>
+</section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
